fixed nav and main being too big

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,8 @@
 */
 
 .main {
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
